Fix the full-width alignment for credited image block [refs: #54]

--- a/themes/jeo-theme/assets/javascript/blocks/imageBlock/imageBlock.css
+++ b/themes/jeo-theme/assets/javascript/blocks/imageBlock/imageBlock.css
@@ -67,3 +67,7 @@
     border-radius: 20px;
     margin-top: 10px;
 }
+
+.wp-block[data-align=full][data-type="jeo-theme/custom-image-block-editor"] {
+    max-width: 100vw;
+}
